plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.4'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'kh.edu.istad'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {

// WebSocket / STOMP support
    implementation 'org.springframework.boot:spring-boot-starter-websocket'


//  for web client
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation "io.projectreactor.addons:reactor-extra:3.5.0"

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

//    for OAuth2
    implementation 'org.keycloak:keycloak-admin-client:26.0.6'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'org.springframework.boot:spring-boot-starter-security'


    implementation 'org.springframework.boot:spring-boot-starter-validation'

    //  mapstruct dependencies
    compileOnly 'org.mapstruct:mapstruct:1.6.3'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
    annotationProcessor 'org.projectlombok:lombok'

//    swagger dependency
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-api:2.8.11'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.11'


    implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch' // Elasticsearch integration

    implementation 'org.springframework.boot:spring-boot-starter-web'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'org.postgresql:postgresql'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}


tasks.named('test') {
    useJUnitPlatform()
}
